*** empty log message ***

--- a/doc/src/manual/ch-build-sim-progs.tex
+++ b/doc/src/manual/ch-build-sim-progs.tex
@@ -385,7 +385,7 @@ Outputs: $(InputName)_n.cpp
  \item \tbf{file name extension}: MSVC 6.0 doesn't recognize \ttt{.cc} files
    as C++ sources. Your options are to switch to the \texttt{.cpp} extension,
    to convince MSVC by changing by the corresponding registry entries.
-   Do a Web search to find out what exactly you need to change.
+   Do a web search to find out what exactly you need to change.
 
 \end{itemize}
 
