--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -2,7 +2,7 @@
 \label{cha:graphics}
 
 \section{Display strings}
-\label{sec:ch-ned-lang:display-strings}
+\label{sec:ch-graphics:display-strings}
 
 
 Display strings\index{display strings} specify the arrangement and
