--- a/doc/src/manual/ch-sim-lib.tex
+++ b/doc/src/manual/ch-sim-lib.tex
@@ -130,6 +130,7 @@ const char *str = msg->name(); // --> returns ""
 
 
 \subsection{fullName() and fullPath()}
+\label{sec:sim-lib:fullname-and-fullpath}
 
 
 Objects have two more member functions which return strings
